Refactoring decks and cards